use isEmpty with trim instead of isBlank because of java support